--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,8 @@
-#index:
-#    path:         /login.html
-#    controller:   App\Controller\DefaultController::index
+index:
+    path:         /
+    controller:   App\Controller\DefaultController::index
+    defaults:
+      template: login.html
 
     #Account endpoints
 login:
