--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -24,3 +24,10 @@ loginPage:
     defaults:
         template: login.html
     methods: GET
+
+portalTemplate:
+    path:         /overview.html
+    controller:   Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: portal.html
+    methods: GET
