--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -26,7 +26,7 @@ loginPage:
     methods: GET
 
 portalTemplate:
-    path:         /overview.html
+    path:         /{portalId}/overview.html
     controller:   Symfony\Bundle\FrameworkBundle\Controller\TemplateController
     defaults:
         template: portal.html
