--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -18,7 +18,11 @@ getPortalDetails:
 
     #Product endpoints
 
-
+updateProducts:
+    path: /products
+    controller: App\Controller\ProductsController::updateProducts
+    methods: POST
+    
     #Templates
 
 loginPage:
